feat: implement spring-and-strut horizontal spacing engine
- Add spring-and-strut layout for horizontal note spacing
- Implement water-fill compression with uncapped lyric lift
- Add grace-host lyric union spacing
- Add failure-mode and non-lyric rest test coverage

Closes #330
Closes #595